# ESP32Core

./: README.md
1.Hardware/: ESP32Sample.OutJob  ESP32Sample.PrjPcb  ESP32sample.PcbDoc  Main.SchDoc
1.Hardware/ESP32D0WDQ6/ESP32Sample/: ESP32DOWDQ6.PcbDoc  ESP32Sample.PrjPcb  Main.SchDoc
1.Hardware/ESP32PICOD4/ESP32PICOSample/: .gitignore  ESP32PICOD4.PcbDoc  ESP32PICOSample.PrjPcb  main.SchDoc
1.Hardware/Gerber/Gerber/: ESP32DOWDQ6-macro.APR_LIB  (+8 more)
1.Hardware/PnPout/: ESP32sample.html
2.Fireware/: ESPCore.vsdx
2.Fireware/ESP32AUStartCore/: platformio.ini
2.Fireware/ESP32StarCore/: CMakeLists.txt  ReadMe.md  platformio.ini
2.Fireware/ESP32StarCore/lib/TFT_LCD/: CMakeLists.txt  Makefile  ReadMe.md  TFT_LCD.cpp  TFT_LCD.h
2.Fireware/ESP32StarCore/lib/TFT_LCD/bsp/: platform_esp32.c  platform_esp32.h  platform_linux.c  platform_linux.h  platform_stm32.c  platform_stm32.h
2.Fireware/ESP32StarCore/lib/TFT_LCD/framework/: ssd1306_fonts.c  ssd1306_fonts.h
2.Fireware/ESP32StarCore/lib/TFT_LCD/hal/ili9341/: ili9341.c  ili9341.h  ili9341_commands.h
2.Fireware/ESP32StarCore/lib/TFT_LCD/hal/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_commands.h
2.Fireware/ESP32StarCore/lib/TFT_LCD/hal/st7789v2/: logo.h  st7789.c  st7789.h  st7789_commands.h
2.Fireware/ESP32StarCore/lib/TFT_LCD/include/: config.h  lcd_common.h  lcd_linuxframebuf.h  stddef_type.h
2.Fireware/ESP32StarCore/lib/TFT_LCD/intf/: framebuf_fb.h  lcd_common.c  lcd_linuxframebuf.c
2.Firmware/ESPS3Camera/: platformio.ini
3.Software/lv_sim_visual_studio/: .gitignore
4.Docs/2.Xmind/: ESP32Core.xmind
(+356 files in other folders)
